--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,7 +53,7 @@ jobs:
             PDFUnlock-macos-arm64.zip
 
   build-windows:
-    runs-on: windows-latest
+    runs-on: windows-2022
     steps:
       - uses: actions/checkout@v4
         with:
@@ -63,63 +63,12 @@ jobs:
         uses: dtolnay/rust-toolchain@stable
         with:
           targets: x86_64-pc-windows-msvc
-      
-      - name: 设置Visual Studio环境
-        uses: ilammy/msvc-dev-cmd@v1
-      
+
       - name: 安装依赖
         run: |
           choco install -y 7zip
           choco install -y strawberryperl
           choco install -y upx
-      
-      - name: 设置环境变量
-        run: |
-          echo "LIBCLANG_PATH=$env:VCINSTALLDIR\Tools\LLVM\x64\bin" | Out-File -FilePath $env:GITHUB_ENV -Append
-          echo "INCLUDE=$env:INCLUDE;$env:WindowsSdkDir\Include\$env:WindowsSDKVersion\ucrt" | Out-File -FilePath $env:GITHUB_ENV -Append
-          echo "LIB=$env:LIB;$env:WindowsSdkDir\Lib\$env:WindowsSDKVersion\ucrt\x64" | Out-File -FilePath $env:GITHUB_ENV -Append
-          echo "MUPDF_SKIP_FONT_EMBED=1" | Out-File -FilePath $env:GITHUB_ENV -Append
-      
-      - name: 修改 mupdf-sys 构建配置
-        run: |
-          # 先进行初始构建，生成必要的构建目录
-          cargo clean -p mupdf-sys
-          cargo build --release --target x86_64-pc-windows-msvc -p mupdf-sys || true
-          
-          # 查找并修改 mupdf 构建配置文件
-          $buildDir = Get-ChildItem -Path "target\x86_64-pc-windows-msvc\release\build" -Filter "mupdf-sys-*" -Directory | Select-Object -First 1
-          if ($buildDir) {
-            $vcxprojFile = Join-Path -Path $buildDir.FullName -ChildPath "out\build\platform\win32\libresources.vcxproj"
-            if (Test-Path $vcxprojFile) {
-              Write-Host "修改 $vcxprojFile 以禁用字体嵌入"
-              # 备份原始文件
-              Copy-Item -Path $vcxprojFile -Destination "$vcxprojFile.bak"
-              # 使用正则表达式修改文件，禁用所有 _bin2coff__ttf_ 目标
-              $content = Get-Content -Path $vcxprojFile -Raw
-              $content = $content -replace '(<Target Name="_bin2coff__ttf_"[^>]*>)', '$1<Message Text="跳过字体嵌入" Importance="high" /><PropertyGroup><TTFSkip>true</TTFSkip></PropertyGroup>'
-              $content | Set-Content -Path $vcxprojFile
-            }
-            
-            # 准备所有必要的字体文件
-            $fontDir = Join-Path -Path $buildDir.FullName -ChildPath "out\build\resources\fonts\droid"
-            New-Item -Path $fontDir -ItemType Directory -Force
-            
-            # 下载所有必要的字体文件
-            $fontFiles = @("DroidSansFallback.ttf", "DroidSans.ttf", "DroidSans-Bold.ttf")
-            foreach ($font in $fontFiles) {
-              $fontUrl = "https://github.com/ArtifexSoftware/mupdf/raw/master/resources/fonts/droid/$font"
-              $fontPath = Join-Path -Path $fontDir -ChildPath $font
-              Write-Host "下载字体: $fontUrl 到 $fontPath"
-              try {
-                Invoke-WebRequest -Uri $fontUrl -OutFile $fontPath -ErrorAction Stop
-                Write-Host "下载成功: $font"
-              } catch {
-                Write-Host "下载失败: $font - $_"
-                # 创建一个空字体文件以绕过检查
-                New-Item -Path $fontPath -ItemType File -Force
-              }
-            }
-          }
 
       - name: 构建Windows
         run: |
@@ -129,7 +78,7 @@ jobs:
           RUSTFLAGS: "-C target-feature=+crt-static"
 
       - name: 安装cargo-wix
-        run: cargo install cargo-wix --version 0.3.3
+        run: cargo install cargo-wix
       
       - name: 创建Windows安装包
         if: startsWith(github.ref, 'refs/tags/')
