--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,8 +61,6 @@ jobs:
       
       - name: 安装Rust
         uses: dtolnay/rust-toolchain@stable
-        with:
-          targets: x86_64-pc-windows-msvc
 
       - name: 安装依赖
         run: |
@@ -72,10 +70,8 @@ jobs:
 
       - name: 构建Windows
         run: |
-          cargo build --release --target x86_64-pc-windows-msvc
-          upx --best --lzma target\x86_64-pc-windows-msvc\release\pdfunlock.exe
-        env:
-          RUSTFLAGS: "-C target-feature=+crt-static"
+          cargo build --release
+          upx --best --lzma target\release\pdfunlock.exe
 
       - name: 安装cargo-wix
         run: cargo install cargo-wix
@@ -83,9 +79,9 @@ jobs:
       - name: 创建Windows安装包
         if: startsWith(github.ref, 'refs/tags/')
         run: |
-          cargo wix --output target\wix\pdfunlock.msi --target x86_64-pc-windows-msvc
+          cargo wix --output target\wix\pdfunlock.msi
           mkdir -p release-win
-          copy target\x86_64-pc-windows-msvc\release\pdfunlock.exe release-win\pdfunlock.exe
+          copy target\release\pdfunlock.exe release-win\pdfunlock.exe
           Compress-Archive -Path release-win\* -DestinationPath PDFUnlock-windows.zip
       
       - name: 上传构建产物
