--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ description = "A tool to remove permissions restrictions from PDF files"
 
 [dependencies]
 mupdf = { git = "https://github.com/messense/mupdf-rs.git", tag = "v0.5.0" }
-fltk = { version = "^1.5", features = ["fltk-bundled"] }
+fltk = { version = "^1.5" }
 
 [profile.release]
 panic = "abort"
